# mindex

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mindex/: __init__.py  mindex.py
skills/llm-index/: SKILL.md
skills/llm-wiki/: SKILL.md
skills/llm-wiki-admin/: SKILL.md
skills/llm-wiki-init/: SKILL.md
skills/llm-wiki/scripts/: lint.sh
src/mindex/: __init__.py  __main__.py  cmd_add_file.py  cmd_del_file.py  cmd_file_search.py  cmd_info.py  cmd_info_file.py  cmd_lint.py  cmd_read_file.py  cmd_search.py  cmd_search_file.py  db.py  mindex.py
src/tests/: __init__.py  test_add_file.py  test_cli.py  test_cli_complete.py  test_del_file.py  test_escape_fts5.py  test_info.py  test_lint.py  test_mindex.py  test_read_file.py  test_search.py  test_search_file.py  test_search_tags.py  test_tags.py
tests/: test_add.py  test_cli.py  test_cli_complete.py  test_search.py  test_tag_filtering.py  test_tags.py
